--- a/code source/package.json
+++ b/code source/package.json
@@ -23,7 +23,9 @@
     "@angular/ssr": "^17.3.0",
     "bootstrap": "^3.3.7",
     "express": "^4.18.2",
+    "ngx-webstorage": "^13.0.1",
     "rxjs": "~7.8.0",
+    "serve": "^14.2.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
